# logic-folding-reference-flow

./: .gitignore  LICENSE  NOTICE  README.md
.claude/: settings.json
docs/: MEMO_INDEX.md  TRIGGER_WATCH.md
docs/memo-source/: LogicFolding-No-Action-Decision-Memo.tex  make_fig_thermal_kernel.py
flows/: LIVE_RUN.md  README.md  check_live.py  odb_wirelength.py  run_live.sh  sta_dump.tcl
julia/: Project.toml
julia/scripts/: run_apc_divergence_demo.jl  run_kirin_2026_thermal_whatif.jl
julia/src/: thermal_apc_solver.jl
julia/test/: test_thermal_apc.jl
python/: pyproject.toml
python/scripts/: kirin_2026_whatif.py
python/src/logic_folding_reference/: __init__.py  baseline.py  core_solver.py
python/tests/: test_baseline_ingest.py  test_break_even.py
python/tests/fixtures/: kirin_2026_claimed.json  opensta_gcd_placed_checks.json  sky130_gcd_baseline.json  sky130_gcd_netlen.json
rust/: Cargo.toml
rust/src/: lib.rs  mock.rs
rust/tests/: parasitic_dominance.rs
tools/guards/: README.md  guard_claimed_pass_has_command.py  guard_eq2_divergence.py  guard_fs_units.py  guard_no_invented_yield.py  guard_no_phantom_pyo3.py  guard_path_segments.py  run_guards.py  test_guards.py
