[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logic-folding-reference"
version = "0.0.1"
description = "Open reference flow stub for LogicFolding-style path-level break-even screening (per LogicFolding No-Action Decision Memo §11)."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
